# prepro-enhancer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  windows-draft-release.yml
docs/: backlog.md  chaos-report.md  lctproj-tsv-loading-report.md  media-dnd.md  mvp-checklist.md  prepro-enhancer_spec.md  previz-enhancer_spec.md  release.md  tauri-assets-dnd-report.md  tauri-dnd-breakage-report.md  tauri-dnd-fix-plan.md  user-manual.md
scripts/: generate-latest-json.mjs
src/: app.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: chaos.mjs  smoke.mjs
