[package]
name = "previz-enhancer"
version = "0.1.0"
description = "Prepro Enhancer desktop app"
authors = ["Prepro Enhancer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
