[package]
name = "prepro-enhancer"
version = "1.0.1"
description = "Prepro Enhancer desktop app"
authors = ["Prepro Enhancer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
